--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "prisma": "^4.12.0"
   }
 }
